adds authentication and public api
